Sat May  5 06:43:10 2012  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*: Imported minitest 2.12.1 (r7323)
	* test/minitest/*: ditto

Sat May  5 01:47:33 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/zlib/test_zlib.rb (test_inflate): add a test for Zlib.inflate.
	  patched by headius (Charles Nutter). [ruby-core:44859] [Bug #6398]

	* test/zlib/test_zlib.rb (test_deflate): add a test for Zlib.deflate.

Sat May  5 00:53:55 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (parse_mode_enc): remove warnings 'Ignoring internal encoding'.
	  [ruby-core:44455] [Bug #6324]

	* io.c (io_encoding_set): ditto.

Fri May  4 07:19:02 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rdoc/parser.rb (RDoc.binary?): fix wrong regexp.
	  [ruby-core:44798] [Bug #6393]

Fri May  4 01:33:20 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parser.rb (RDoc.alias_extension): a real file is irrelevant
	  to aliasing.  [ruby-core:44796][Bug #6392]

	* lib/rdoc/parser.rb (RDoc.zip?): non-existent file will not be a zip
	  file.

	* lib/rdoc/parser.rb (RDoc.can_parse_by_name): accept aliased
	  extension file names.

	* lib/rdoc/parser.rb (RDoc.binary?): binary read data may have
	  incomplete multibyte sequence.  [ruby-core:44798][Bug #6393]

Wed May  2 23:55:51 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb (Test::Unit::RequireFiles#non_options): expand
	  real path to get rid of loading same files via symlinks.

Wed May  2 23:26:04 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* cont.c (rb_fiber_m_transfer): improve sample code in Fiber#transfer
	  documentation. emphasize the difference between transfer and resume.

Wed May  2 23:21:20 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): allow spaces between lambda arrow and
	  parenthesis.  [ruby-dev:45605][Feature #6390]

Wed May  2 19:06:30 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* cont.c (rb_fiber_m_transfer): Improved Fiber documentation.